# ESCape32-WiFi-Link

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  build_defs.h.in  idf_component.yml  main.c  root.html  root_de.json  root_en.json  root_fr.json  root_ru.json  root_zh.json
